# profinspect

./: README.md  TODO.md  main.py  pyproject.toml
profecy/: __main__.py  app.py  cli.py  config.py  converter.py
profecy/static/css/: style.css
profecy/static/js/: app.js
profecy/templates/: index.html  settings.html
profinspect/: __init__.py  app.py  cli.py  config.py  converter.py
profinspect/static/css/: style.css
profinspect/static/js/: app.js
profinspect/templates/: base.html  index.html  settings.html
