[project]
name = "profinspect"
version = "0.1.0"
description = "Tool to visualize profiling data -- a UI for gprof2dot"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.0",
    "gprof2dot>=2022.7.29",
]

[project.scripts]
profinspect = "profinspect.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
